fixed spacing issue

--- a/src/styles/pages.scss
+++ b/src/styles/pages.scss
@@ -260,7 +260,7 @@ $selection-button-width: 72px;
   
   &.small {
     height: 40px;
-    margin-right: 15px;
+    margin-right: 12px;
     width: 40px;
   }
 }
